--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gachbari Net - Village Internet Service Provider</title>
+    <link rel="icon" href="/images/logo.png">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -51,7 +52,7 @@
                     <div class="signal-wave signal-wave-2"></div>
                     <div class="signal-wave signal-wave-3"></div>
                 </div>
-                <img src="images/hero-bg.jpg" alt="Village with internet connection">
+                <!-- <img src="images/hero-bg.jpg" alt="Village with internet connection"> -->
             </div>
         </div>
         <div class="wave-divider"></div>
@@ -67,7 +68,7 @@
                     <p>Our locally-managed network ensures fast speeds with personalized customer service tailored to our community's needs.</p>
                     <div class="stats">
                         <div class="stat-item">
-                            <div class="stat-number" data-count="500">0</div>
+                            <div class="stat-number" data-count="6087">0</div>
                             <div class="stat-label">Happy Customers</div>
                         </div>
                         <div class="stat-item">
@@ -75,7 +76,7 @@
                             <div class="stat-label">% Uptime</div>
                         </div>
                         <div class="stat-item">
-                            <div class="stat-number" data-count="10">0</div>
+                            <div class="stat-number" data-count="13">0</div>
                             <div class="stat-label">Villages Served</div>
                         </div>
                     </div>
@@ -203,6 +204,9 @@
                             <input type="tel" id="phone" placeholder="Phone Number" required>
                         </div>
                         <div class="form-group">
+                            <input type="email" id="email" placeholder="Your E-mail" required>
+                        </div>
+                        <div class="form-group">
                             <input type="text" id="village" placeholder="Your Village" required>
                         </div>
                         <div class="form-group">
@@ -228,7 +232,8 @@
                         </div>
                         <div class="info-content">
                             <h3>Call Us</h3>
-                            <p>01735595535</p>
+                            <p>01735-595535</p>
+                            <p>09613-825535</p>
                         </div>
                     </div>
                     
@@ -249,7 +254,7 @@
                         <div class="info-content">
                             <h3>Visit Us</h3>
                             <p>Gachbari Net Headquarters</p>
-                            <p>Main Road, Gachbari, West Bengal 721211</p>
+                            <p>Main Road, Gachbari</p>
                         </div>
                     </div>
                 </div>
@@ -268,8 +273,8 @@
                     </div>
                     <p>Bringing high-speed internet to rural communities since 2023. Committed to connecting the unconnected.</p>
                     <div class="social-links">
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-whatsapp"></i></a>
+                        <a href="https://www.facebook.com/gachbarinet" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://wa.me/8801735595535" target="_blank"><i class="fab fa-whatsapp"></i></a>
                         <a href="#"><i class="fab fa-instagram"></i></a>
                         <a href="#"><i class="fab fa-youtube"></i></a>
                     </div>
