--- a/multi-page/about.html
+++ b/multi-page/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - Gachbari Net</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="img/logo.png">
+    <link rel="icon" href="/img/logo.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
@@ -40,7 +40,7 @@
             <h2 class="section-title">About Gachbari Net</h2>
             <div class="about-content">
                 <div class="about-text">
-                    <p>Gachbari Net was founded in 2023 with a mission to bridge the digital divide in rural areas. We believe every village deserves access to reliable, affordable internet.</p>
+                    <p>Gachbari Net was founded in 2020 with a mission to bridge the digital divide in rural areas. We believe every village deserves access to reliable, affordable internet.</p>
                     <p>Our locally-managed network ensures fast speeds with personalized customer service tailored to our community's needs.</p>
                     <div class="stats">
                         <div class="stat-item">
@@ -96,7 +96,7 @@
                     <div class="logo">
                         <span>Gachbari Net</span>
                     </div>
-                    <p>Bringing high-speed internet to rural communities since 2023. Committed to connecting the unconnected.</p>
+                    <p>Bringing high-speed internet to rural communities since 2020. Committed to connecting the unconnected.</p>
                     <div class="social-links">
                         <a href="#"><i class="fab fa-facebook-f"></i></a>
                         <a href="#"><i class="fab fa-whatsapp"></i></a>
