--- a/multi-page/contact.html
+++ b/multi-page/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us - Gachbari Net</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="img/logo.png">
+    <link rel="icon" href="/img/logo.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
@@ -116,9 +116,8 @@
                     <div class="business-hours">
                         <h3>Business Hours</h3>
                         <ul>
-                            <li>Monday-Friday: 9AM - 6PM</li>
-                            <li>Saturday: 9AM - 4PM</li>
-                            <li>Sunday: Closed</li>
+                            <li>Sanday-Thursday: 10AM - 6PM</li>
+                            <li>Fridey: Closed</li>
                         </ul>
                     </div>
                 </div>
@@ -131,7 +130,7 @@
         <div class="container">
             <h2 class="section-title">Our Location</h2>
             <div class="map-container">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3650.837240932881!2d90.40665931543187!3d23.7908683932294!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755c70b72f1b8b1%3A0xfc87a1bc6699ed26!2sDhaka!5e0!3m2!1sen!2sbd!4v1620000000000!5m2!1sen!2sbd" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d452.1832795893774!2d92.15562562180214!3d24.950247148263756!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x375035431951c97f%3A0x64237302d0d67c9b!2z4KaX4Ka-4Kab4Kas4Ka-4Kec4KeAIOCmqOCnh-Cmnw!5e0!3m2!1sen!2sbd!4v1754647916140!5m2!1sen!2sbd" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
         </div>
     </section>
