--- a/multi-page/plans.html
+++ b/multi-page/plans.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Internet Plans - Gachbari Net</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="img/logo.png">
+    <link rel="icon" href="/img/logo.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
