--- a/single-page/index.html
+++ b/single-page/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gachbari Net - Village Internet Service Provider</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="/img/logo.png">
+    <link rel="icon" href="/single-page/img/logo.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
@@ -47,7 +47,7 @@
             </div>
             <div class="hero-image">
                 <div class="signal-animation">
-                    <div class="wifiimg"><img src="/img/wifi.svg" alt="wifi icon"></div>
+                    <div class="wifiimg"><img src="/single-page/img/wifi.svg" alt="wifi icon"></div>
                     <div class="signal-dot"></div>
                     <div class="signal-wave signal-wave-1"></div>
                     <div class="signal-wave signal-wave-2"></div>
