--- a/multi-page/contact.html
+++ b/multi-page/contact.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us - Gachbari Net</title>
+    <title>Gachbari Net - Village Internet Service Provider</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="/img/logo.png">
+    <link rel="icon" href="/multi-page/img/logo.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
@@ -141,14 +141,13 @@
             <div class="footer-content">
                 <div class="footer-about">
                     <div class="logo">
-                        <span>Gachbari Net</span>
+                        <span class="footer-logo"><a class="okey" href="/">Gachbari Net</a></span>
                     </div>
-                    <p>Bringing high-speed internet to rural communities since 2023. Committed to connecting the unconnected.</p>
+                    <p>Bringing high-speed internet to rural communities since 2020. Committed to connecting the unconnected.</p>
                     <div class="social-links">
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-whatsapp"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-youtube"></i></a>
+                        <a href="https://www.facebook.com/GachbariNet" title="Our Facebook Page" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://wa.me/8801322195254" title="Our Official WhatsApp" target="_blank"><i class="fab fa-whatsapp"></i></a>
+                        <a href="https://instagram.com/gachbari_net" title="Our Instagram Page" target="_blank"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
                 
@@ -167,7 +166,7 @@
                     <h3>Support</h3>
                     <ul>
                         <li><a href="#">FAQ</a></li>
-                        <li><a href="https://fast.com/">Speed Test</a></li>
+                        <li><a href="https://fast.com/" target="_blank">Speed Test</a></li>
                         <li><a href="#">Pay Bill Online</a></li>
                         <li><a href="#">Network Status</a></li>
                         <li><a href="#">Terms of Service</a></li>
@@ -177,7 +176,7 @@
             
             <div class="footer-bottom">
                 <p>&copy; 2025 Gachbari Net. All Rights Reserved.</p>
-                <p>Developed with ❤️ for rural communities</p>
+                <p>Developed with <a href="https://mayruf.info/" target="_blank">Mayruf</a> for Gachbari Net</p>
             </div>
         </div>
     </footer>
