--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gachbari Net - Village Internet Service Provider</title>
+    <title>Gachbari Net - Village Internet Service Provider in Bangladesh</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="/img/logo.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Gachbari Net is a trusted Village Internet Service Provider in Bangladesh, offering high-speed, affordable broadband and 24/7 local support for rural communities.">
+    <meta name="keywords" content="Village Internet Service Provider, rural internet Bangladesh, Gachbari Net, affordable broadband, rural ISP, wifi service, high speed internet plans">
 </head>
 <body>
     <!-- Header/Navigation -->
@@ -38,8 +42,8 @@
     <section class="hero">
         <div class="container">
             <div class="hero-content">
-                <h1 class="hero-title">Lightning Fast Internet for <span class="village-name">Your Village</span></h1>
-                <p class="hero-subtitle">Connecting rural communities with affordable, high-speed internet</p>
+                <h1 class="hero-title">Reliable Village Internet Service Provider</h1>
+                <p class="hero-subtitle">Connecting rural Bangladesh with fast, affordable internet solutions designed for villages and small towns.</p>
                 <div class="cta-buttons">
                     <a href="plans.html" class="btn btn-primary">View Plans</a>
                     <a href="coverage.html" class="btn btn-secondary">Check Coverage</a>
@@ -60,32 +64,33 @@
     <!-- Features Section -->
     <section class="features">
         <div class="container">
-            <h2 class="section-title">Why Choose Gachbari Net?</h2>
+            <h2 class="section-title">Why Choose Our Village Internet Service?</h2>
             <div class="features-grid">
                 <div class="feature-card">
                     <div class="feature-icon">
                         <i class="fas fa-bolt"></i>
                     </div>
-                    <h3>High Speed</h3>
-                    <p>Experience lightning-fast internet speeds perfect for streaming, gaming, and working from home.</p>
+                    <h3>High-Speed Rural Internet</h3>
+                    <p>Enjoy fast and reliable internet speeds for streaming, gaming, online classes, and remote work in your village.</p>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">
                         <i class="fas fa-tag"></i>
                     </div>
-                    <h3>Affordable</h3>
-                    <p>Budget-friendly plans designed specifically for rural communities.</p>
+                    <h3>Affordable Internet Plans</h3>
+                    <p>We provide budget-friendly internet packages tailored for rural households and small businesses.</p>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">
                         <i class="fas fa-headset"></i>
                     </div>
-                    <h3>Local Support</h3>
-                    <p>24/7 customer service from people who understand your needs.</p>
+                    <h3>Local ISP Support</h3>
+                    <p>As your trusted Village Internet Service Provider, our support team is available 24/7 to assist you.</p>
                 </div>
             </div>
         </div>
     </section>
+
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
@@ -94,7 +99,7 @@
                     <div class="logo">
                         <span class="footer-logo"><a class="okey" href="/">Gachbari Net</a></span>
                     </div>
-                    <p>Bringing high-speed internet to rural communities since 2020. Committed to connecting the unconnected.</p>
+                    <p>Since 2020, Gachbari Net has been the trusted Village Internet Service Provider in Bangladesh, bringing high-speed broadband to rural communities.</p>
                     <div class="social-links">
                         <a href="https://www.facebook.com/GachbariNet" title="Our Facebook Page" target="_blank"><i class="fab fa-facebook-f"></i></a>
                         <a href="https://wa.me/8801322195254" title="Our Official WhatsApp" target="_blank"><i class="fab fa-whatsapp"></i></a>
@@ -127,7 +132,7 @@
             
             <div class="footer-bottom">
                 <p>&copy; 2025 Gachbari Net. All Rights Reserved.</p>
-                <p>Developed with <a href="https://mayruf.info/" target="_blank">Mayruf</a> for Gachbari Net</p>
+                <p>Developed with ❤️ <a href="https://mayruf.info/" target="_blank">Mayruf</a> for Gachbari Net</p>
             </div>
         </div>
     </footer>
