--- a/ui/form.html
+++ b/ui/form.html
@@ -234,7 +234,7 @@
         <div class="main-header">
             <div class="header-box">
                 <div class="header-img">
-                    <img src="/img/logo.png" alt="Internet Service Provider logo">
+                    <a href="/"><img src="/img/logo.png" alt="Internet Service Provider logo"></a>
                 </div>
                 <div class="header-text">
                     <h1 id="header-title">Internet Connection Application</h1>
