--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="container">
             <nav class="navbar">
                 <div class="logo">
-                    <img src="img/logo.png" alt="Gachbari Net">
+                    <a href="/"><img src="img/logo.png" alt="Gachbari Net logo"></a>
                     <span><a href="index.html">Gachbari Net</a></span>
                 </div>
                 <ul class="nav-links">
