--- a/index.html
+++ b/index.html
@@ -12,6 +12,19 @@
     <!-- SEO Meta Tags -->
     <meta name="description" content="Gachbari Net is a trusted Village Internet Service Provider in Bangladesh, offering high-speed, affordable broadband and 24/7 local support for rural communities.">
     <meta name="keywords" content="Village Internet Service Provider, rural internet Bangladesh, Gachbari Net, affordable broadband, rural ISP, wifi service, high speed internet plans">
+    <!-- ========== Start google analytics ========== -->
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9WH3X335M8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-9WH3X335M8');
+</script>
+<!-- ========== End google analytics ========== -->
+
+
 </head>
 <body>
     <!-- Header/Navigation -->
