--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,7 @@
                     <li><a href="plans.html">Plans</a></li>
                     <li><a href="coverage.html">Coverage</a></li>
                     <li><a href="contact.html" class="active">Contact</a></li>
+                    <li><a href="/blogs/" class="active">Blogs</a></li>
                 </ul>
                 <div class="burger">
                     <div class="line1"></div>
@@ -151,6 +152,7 @@
                         <li><a href="plans.html">Plans</a></li>
                         <li><a href="coverage.html">Coverage</a></li>
                         <li><a href="contact.html">Contact</a></li>
+                        <li><a href="/blogs/">Blogs</a></li>
                     </ul>
                 </div>
                 
