--- a/coverage.html
+++ b/coverage.html
@@ -24,6 +24,7 @@
                     <li><a href="plans.html">Plans</a></li>
                     <li><a href="coverage.html" class="active">Coverage</a></li>
                     <li><a href="contact.html">Contact</a></li>
+                    <li><a href="/blogs/">Blogs</a></li>
                 </ul>
                 <div class="burger">
                     <div class="line1"></div>
@@ -114,6 +115,7 @@
                         <li><a href="plans.html">Plans</a></li>
                         <li><a href="coverage.html">Coverage</a></li>
                         <li><a href="contact.html">Contact</a></li>
+                        <li><a href="/blogs/">Blogs</a></li>
                     </ul>
                 </div>
                 
