--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                     <li><a href="plans.html">Plans</a></li>
                     <li><a href="coverage.html">Coverage</a></li>
                     <li><a href="contact.html">Contact</a></li>
+                    <li><a href="/blogs/">Blogs</a></li>
                 </ul>
                 <div class="burger">
                     <div class="line1"></div>
@@ -128,6 +129,7 @@
                         <li><a href="plans.html">Plans</a></li>
                         <li><a href="coverage.html">Coverage</a></li>
                         <li><a href="contact.html">Contact</a></li>
+                        <li><a href="/blogs/">Blogs</a></li>
                     </ul>
                 </div>
                 
