--- a/plans.html
+++ b/plans.html
@@ -26,6 +26,7 @@
                     <li><a href="plans.html" class="active">Plans</a></li>
                     <li><a href="coverage.html">Coverage</a></li>
                     <li><a href="contact.html">Contact</a></li>
+                    <li><a href="/blogs/">Blogs</a></li>
                 </ul>
                 <div class="burger">
                     <div class="line1"></div>
@@ -238,6 +239,7 @@
                         <li><a href="plans.html">Plans</a></li>
                         <li><a href="coverage.html">Coverage</a></li>
                         <li><a href="contact.html">Contact</a></li>
+                        <li><a href="/blogs/">Blogs</a></li>
                     </ul>
                 </div>
 
