--- a/blogs/blog-detail.html
+++ b/blogs/blog-detail.html
@@ -7,7 +7,7 @@
     <title>Blog Detail - Assailant Fighters Academy</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="icon" href="../img/club logo.png">
+    <link rel="icon" href="../img/logo.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
         integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
