--- a/about.html
+++ b/about.html
@@ -8,6 +8,9 @@
     <link rel="icon" href="/img/logo.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+        <!-- SEO Meta Tags -->
+    <meta name="description" content="Gachbari Net is a trusted village internet service provider in rural Bangladesh. Offering fast, reliable, and affordable broadband plans since 2020. Connect your home, office, or business today.">
+    <meta name="keywords" content="Gachbari Net, rural internet Bangladesh, ISP, broadband plans, village internet, high-speed internet, affordable internet, internet provider Sylhet, Gachbari broadband">
 </head>
 <body>
     <!-- Header/Navigation -->
@@ -45,7 +48,7 @@
                     <p>Our locally-managed network ensures fast speeds with personalized customer service tailored to our community's needs.</p>
                     <div class="stats">
                         <div class="stat-item">
-                            <div class="stat-number" data-count="10000">100</div>
+                            <div class="stat-number" data-count="10000">0</div>
                             <div class="stat-label">Happy Customers</div>
                         </div>
                         <div class="stat-item">
@@ -59,7 +62,7 @@
                     </div>
                 </div>
                 <div class="about-image">
-                    <img src="img/team.jpg" alt="Gachbari Net team">
+                    <img src="img/team.jpg" alt="Gachbari Net">
                 </div>
             </div>
         </div>
