--- a/contact.html
+++ b/contact.html
@@ -3,12 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gachbari Net - Village Internet Service Provider</title>
+    <title>Contact - Gachbari Net | Internet Service Provider</title>
+
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Get in touch with Gachbari Net for new internet connections, support, or complaints. Call us at 09613-825535 or visit our office at Gachbari Bazar. Reliable village internet since 2020.">
+    <meta name="keywords" content="Gachbari Net contact, ISP Bangladesh, rural internet provider, internet service Sylhet, broadband Gachbari, support Gachbari Net, internet connection, village broadband">
+
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="/img/logo.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <!-- Header/Navigation -->
     <header class="header">
