--- a/coverage.html
+++ b/coverage.html
@@ -3,12 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gachbari Net - Village Internet Service Provider</title>
+    <title>Gachbari Net Coverage - Internet Service in Villages</title>
+
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Explore Gachbari Net’s coverage areas. Currently serving Gachbari Bazar, Narainpur, Amorpur, and Fagu, with expansion to new villages every month. Reliable rural broadband since 2020.">
+    <meta name="keywords" content="Gachbari Net coverage, rural internet Bangladesh, broadband villages, Gachbari Bazar internet, Narainpur ISP, Amorpur internet service, Fagu broadband, rural connectivity Bangladesh">
+
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="/img/logo.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <!-- Header/Navigation -->
     <header class="header">
