--- a/index.html
+++ b/index.html
@@ -3,29 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gachbari Net - Village Internet Service Provider in Bangladesh</title>
+    <title>Gachbari Net - Reliable Village Internet Service Provider in Bangladesh</title>
+
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Gachbari Net is a trusted Village Internet Service Provider in Bangladesh. We provide fast, affordable broadband and 24/7 support to rural communities since 2020. Check our internet plans and coverage today.">
+    <meta name="keywords" content="Gachbari Net, Village Internet Service Provider, rural internet Bangladesh, broadband ISP Bangladesh, high speed internet for villages, affordable wifi plans, Sylhet internet provider">
+
+    <!-- Styles & Fonts -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="/img/logo.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 
-    <!-- SEO Meta Tags -->
-    <meta name="description" content="Gachbari Net is a trusted Village Internet Service Provider in Bangladesh, offering high-speed, affordable broadband and 24/7 local support for rural communities.">
-    <meta name="keywords" content="Village Internet Service Provider, rural internet Bangladesh, Gachbari Net, affordable broadband, rural ISP, wifi service, high speed internet plans">
-    <!-- ========== Start google analytics ========== -->
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-9WH3X335M8"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-9WH3X335M8');
-</script>
-<!-- ========== End google analytics ========== -->
-
-
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9WH3X335M8"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-9WH3X335M8');
+    </script>
 </head>
+
 <body>
     <!-- Header/Navigation -->
     <header class="header">
