--- a/plans.html
+++ b/plans.html
@@ -4,12 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gachbari Net - Village Internet Service Provider</title>
+    <title>Gachbari Net Internet Plans - Affordable Broadband in Bangladesh</title>
+
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Choose from Gachbari Net’s affordable internet plans in Bangladesh. From 15 Mbps to 100 Mbps, enjoy unlimited data, free installation, and 24/7 support. Perfect for rural households and businesses.">
+    <meta name="keywords" content="Gachbari Net plans, internet packages Bangladesh, broadband plans, rural ISP packages, 15 Mbps internet, 25 Mbps broadband, affordable internet Bangladesh, village wifi plans">
+
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="/img/logo.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
+
 
 <body>
     <!-- Header/Navigation -->
